--- a/challenge_1/public/index.html
+++ b/challenge_1/public/index.html
@@ -1,2 +1,11 @@
-
-
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+  <meta charset="utf-8">
+  <title>Historical Events Finder</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="text/javascript" src='./app.js'></script>
+  </body>
+</html>
