--- a/challenge_2/public/index.html
+++ b/challenge_2/public/index.html
@@ -1,2 +1,14 @@
+<!DOCTYPE html>
+<html lang='en_US'>
 
+<head>
+  <meta charset='utf-8'>
+  <title>Cryptocurrency Charting Tool</title>
+</head>
 
+<body>
+  <div id='app'></div>
+  <script type='text/javascript' src="./app.js"> </script>
+</body>
+
+</html>
